--- a/public/style.css
+++ b/public/style.css
@@ -76,3 +76,8 @@ hr{
     height: 100%;   
     box-shadow: -1px 1px 8px 1px #888888;
 }
+#titleniSiya{
+    font-size: 30px;
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+}
